fix min height of page wrap to 100vh

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -24,6 +24,9 @@ body
   height: 170px
   .logoLink
     flex: 0 0 150px
+    
+.page-wrap
+  min-heigh: 100vh
 
 .page-wrap div:first-child
   display: flex
